fix tooltip was behind of other texts

--- a/tools/tooltip.css
+++ b/tools/tooltip.css
@@ -8,7 +8,6 @@
 [data-tooltip]::before {
     content: attr(data-tooltip);
     visibility: hidden;
-    /* width: 120px; */
     background-color: rgba(65, 65, 65, 0.74);
     color: #fff;
     text-align: center;
@@ -21,7 +20,7 @@
     left:0;
     top:100%;
     white-space: nowrap;
-    /* z-index: 1; */
+    z-index: 1;
 }
   
 /* Show the tooltip text when you mouse over the tooltip container */
